// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a single image properly 1`] = `
.c8 {
  padding: 0;
  margin-top: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c8 .title {
  font-family: Unica77LLWebItalic , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c9 {
  color: #999;
}

.c9 .name:after {
  content: ', ';
}

.c9 .title:after {
  content: ', ';
}

.c9 .date:after {
  content: ', ';
}

.c7 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c7:hover {
  opacity: 1;
}

.c6 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c3 {
  position: relative;
}

.c3:hover .c5 {
  opacity: 1;
}

.c4 {
  display: block;
}

.c2 {
  text-decoration: none;
}

.c1 {
  margin-right: 0px;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (max-width:600px) {
  .c8 {
    padding: 0 10px;
  }
}

@media (max-width:720px) {
  .c3 .c5 {
    opacity: 1;
  }
}

@media (max-width:600px) {
  .c1 {
    margin-bottom: 10px;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div
  className="c0"
>
  .c7 {
  padding: 0;
  margin-top: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c7 .title {
  font-family: Unica77LLWebItalic , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c8 {
  color: #999;
}

.c8 .name:after {
  content: ', ';
}

.c8 .title:after {
  content: ', ';
}

.c8 .date:after {
  content: ', ';
}

.c6 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c6:hover {
  opacity: 1;
}

.c5 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c2 {
  position: relative;
}

.c2:hover .c4 {
  opacity: 1;
}

.c3 {
  display: block;
}

.c1 {
  text-decoration: none;
}

.c0 {
  margin-right: 0px;
  width: 100%;
}

@media (max-width:600px) {
  .c7 {
    padding: 0 10px;
  }
}

@media (max-width:720px) {
  .c2 .c4 {
    opacity: 1;
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 10px;
  }
}

<div
    className="c0"
    width={undefined}
  >
    .c6 {
  padding: 0;
  margin-top: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c6 .title {
  font-family: Unica77LLWebItalic , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c7 {
  color: #999;
}

.c7 .name:after {
  content: ', ';
}

.c7 .title:after {
  content: ', ';
}

.c7 .date:after {
  content: ', ';
}

.c5 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c5:hover {
  opacity: 1;
}

.c4 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c1 {
  position: relative;
}

.c1:hover .c3 {
  opacity: 1;
}

.c2 {
  display: block;
}

.c0 {
  text-decoration: none;
}

@media (max-width:600px) {
  .c6 {
    padding: 0 10px;
  }
}

@media (max-width:720px) {
  .c1 .c3 {
    opacity: 1;
  }
}

<div
      className="display-artwork"
    >
      .c5 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c5:hover {
  opacity: 1;
}

.c4 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c1 {
  position: relative;
}

.c1:hover .c3 {
  opacity: 1;
}

.c2 {
  display: block;
}

.c0 {
  text-decoration: none;
}

@media (max-width:720px) {
  .c1 .c3 {
    opacity: 1;
  }
}

<a
        className="c0"
        href="/artwork/fernando-botero-nude-on-the-beach"
      >
        .c4 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c4:hover {
  opacity: 1;
}

.c3 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0 {
  position: relative;
}

.c0:hover .c2 {
  opacity: 1;
}

.c1 {
  display: block;
}

@media (max-width:720px) {
  .c0 .c2 {
    opacity: 1;
  }
}

<div
          className="c0"
        >
          .c0 {
  display: block;
}

<img
            alt="Nude on the Beach"
            className="display-artwork__image c0"
            height="auto"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F0aRUvnVgQKbQk5dj8xcCAg%2Flarger.jpg&width=1200&quality=95"
            width="100%"
          />
          .c2 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c2:hover {
  opacity: 1;
}

.c1 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c0 {
  opacity: 1;
}

@media (max-width:720px) {
  .c0 .c0 {
    opacity: 1;
  }
}

<div
            className="c0 c1"
          >
            .c0 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover {
  opacity: 1;
}

<div
              className="c0"
              onClick={[Function]}
            >
              <svg
                className="expand"
                version="1.1"
                viewBox="0 0 27 27"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <g>
                    <circle
                      cx="13.9575195"
                      cy="13.0588379"
                      fill="#000000"
                      fillRule="nonzero"
                      r="13"
                    />
                    <g
                      stroke="#FFFFFF"
                      transform="translate(8.000000, 7.000000)"
                    >
                      <g>
                        <g
                          transform="translate(0.382532, 0.382532)"
                        >
                          <polyline
                            points="4.78165571 0 11.1571966 0 11.1571966 6.37554094"
                          />
                          <polyline
                            points="-1.01881144e-06 4.78165537 6.37553992 4.78165537 6.37553992 11.1571963"
                            transform="translate(3.187769, 7.969426) rotate(-180.000000) translate(-3.187769, -7.969426) "
                          />
                          <path
                            d="M10.360254,0.796942618 L0.796942618,10.360254"
                            strokeLinecap="square"
                          />
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </svg>
            </div>
          </div>
        </div>
      </a>
      .c0 {
  padding: 0;
  margin-top: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c0 .title {
  font-family: Unica77LLWebItalic , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c1 {
  color: #999;
}

.c1 .name:after {
  content: ', ';
}

.c1 .title:after {
  content: ', ';
}

.c1 .date:after {
  content: ', ';
}

@media (max-width:600px) {
  .c0 {
    padding: 0 10px;
  }
}

<div
        className="display-artwork__caption c0"
      >
        .c0 {
  color: #999;
}

.c0 .name:after {
  content: ', ';
}

.c0 .title:after {
  content: ', ';
}

.c0 .date:after {
  content: ', ';
}

<div
          className="c0"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": <span>
                  <span
                    className="artist-name"
                  >
                    <span
                      className="name"
                    >
                      <file__StyledTextLink
                        color="#999"
                        href="/artwork/fernando-botero"
                        underline={false}
                      >
                        Fernando Botero
                      </file__StyledTextLink>
                    </span>
                  </span>
                  <span
                    className="title"
                  >
                    <file__StyledTextLink
                      color="#999"
                      href="/artwork/fernando-botero-nude-on-the-beach"
                      underline={false}
                    >
                      Nude on the Beach
                    </file__StyledTextLink>
                  </span>
                  <span
                    className="date"
                  >
                    2000
                  </span>
                  <file__StyledTextLink
                    color="#999"
                    href="/partner/gary-nader"
                    underline={false}
                  >
                    Gary Nader
                  </file__StyledTextLink>
                </span>,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders properly 1`] = `
.c8 {
  padding: 0;
  margin-top: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c8 .title {
  font-family: Unica77LLWebItalic , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c9 {
  color: #999;
}

.c9 .name:after {
  content: ', ';
}

.c9 .title:after {
  content: ', ';
}

.c9 .date:after {
  content: ', ';
}

.c7 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c7:hover {
  opacity: 1;
}

.c6 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c3 {
  position: relative;
}

.c3:hover .c5 {
  opacity: 1;
}

.c4 {
  display: block;
}

.c2 {
  text-decoration: none;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 10px 0 10px 0;
}

.c12 {
  padding: 0;
  width: 100%;
  word-break: break-word;
}

.c12 > p,
.c12 p,
.c12 .public-DraftEditorPlaceholder-root {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
  color: #999;
  margin: 0;
}

.c12 > a,
.c12 a {
  color: #999;
}

.c12 > a:hover,
.c12 a:hover {
  color: black;
}

.c1 {
  margin-right: 10px;
  width: 312px;
}

.c10 {
  margin-right: 10px;
  width: 168px;
}

.c13 {
  margin-right: 0px;
  width: 178px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (max-width:600px) {
  .c8 {
    padding: 0 10px;
  }
}

@media (max-width:720px) {
  .c3 .c5 {
    opacity: 1;
  }
}

@media (max-width:600px) {
  .c11 {
    padding: 0px 10px;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 0px;
  }
}

@media (max-width:600px) {
  .c1 {
    margin-bottom: 10px;
  }
}

@media (max-width:600px) {
  .c10 {
    margin-bottom: 10px;
  }
}

@media (max-width:600px) {
  .c13 {
    margin-bottom: 10px;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div
  className="c0"
>
  .c7 {
  padding: 0;
  margin-top: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c7 .title {
  font-family: Unica77LLWebItalic , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c8 {
  color: #999;
}

.c8 .name:after {
  content: ', ';
}

.c8 .title:after {
  content: ', ';
}

.c8 .date:after {
  content: ', ';
}

.c6 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c6:hover {
  opacity: 1;
}

.c5 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c2 {
  position: relative;
}

.c2:hover .c4 {
  opacity: 1;
}

.c3 {
  display: block;
}

.c1 {
  text-decoration: none;
}

.c0 {
  margin-right: 10px;
  width: 312px;
}

@media (max-width:600px) {
  .c7 {
    padding: 0 10px;
  }
}

@media (max-width:720px) {
  .c2 .c4 {
    opacity: 1;
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 10px;
  }
}

<div
    className="c0"
    width={312}
  >
    .c6 {
  padding: 0;
  margin-top: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c6 .title {
  font-family: Unica77LLWebItalic , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c7 {
  color: #999;
}

.c7 .name:after {
  content: ', ';
}

.c7 .title:after {
  content: ', ';
}

.c7 .date:after {
  content: ', ';
}

.c5 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c5:hover {
  opacity: 1;
}

.c4 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c1 {
  position: relative;
}

.c1:hover .c3 {
  opacity: 1;
}

.c2 {
  display: block;
}

.c0 {
  text-decoration: none;
}

@media (max-width:600px) {
  .c6 {
    padding: 0 10px;
  }
}

@media (max-width:720px) {
  .c1 .c3 {
    opacity: 1;
  }
}

<div
      className="display-artwork"
    >
      .c5 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c5:hover {
  opacity: 1;
}

.c4 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c1 {
  position: relative;
}

.c1:hover .c3 {
  opacity: 1;
}

.c2 {
  display: block;
}

.c0 {
  text-decoration: none;
}

@media (max-width:720px) {
  .c1 .c3 {
    opacity: 1;
  }
}

<a
        className="c0"
        href="/artwork/fernando-botero-nude-on-the-beach"
      >
        .c4 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c4:hover {
  opacity: 1;
}

.c3 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0 {
  position: relative;
}

.c0:hover .c2 {
  opacity: 1;
}

.c1 {
  display: block;
}

@media (max-width:720px) {
  .c0 .c2 {
    opacity: 1;
  }
}

<div
          className="c0"
        >
          .c0 {
  display: block;
}

<img
            alt="Nude on the Beach"
            className="display-artwork__image c0"
            height={224}
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F0aRUvnVgQKbQk5dj8xcCAg%2Flarger.jpg&width=1200&quality=95"
            width={312}
          />
          .c2 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c2:hover {
  opacity: 1;
}

.c1 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c0 {
  opacity: 1;
}

@media (max-width:720px) {
  .c0 .c0 {
    opacity: 1;
  }
}

<div
            className="c0 c1"
          >
            .c0 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover {
  opacity: 1;
}

<div
              className="c0"
              onClick={[Function]}
            >
              <svg
                className="expand"
                version="1.1"
                viewBox="0 0 27 27"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <g>
                    <circle
                      cx="13.9575195"
                      cy="13.0588379"
                      fill="#000000"
                      fillRule="nonzero"
                      r="13"
                    />
                    <g
                      stroke="#FFFFFF"
                      transform="translate(8.000000, 7.000000)"
                    >
                      <g>
                        <g
                          transform="translate(0.382532, 0.382532)"
                        >
                          <polyline
                            points="4.78165571 0 11.1571966 0 11.1571966 6.37554094"
                          />
                          <polyline
                            points="-1.01881144e-06 4.78165537 6.37553992 4.78165537 6.37553992 11.1571963"
                            transform="translate(3.187769, 7.969426) rotate(-180.000000) translate(-3.187769, -7.969426) "
                          />
                          <path
                            d="M10.360254,0.796942618 L0.796942618,10.360254"
                            strokeLinecap="square"
                          />
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </svg>
            </div>
          </div>
        </div>
      </a>
      .c0 {
  padding: 0;
  margin-top: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c0 .title {
  font-family: Unica77LLWebItalic , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c1 {
  color: #999;
}

.c1 .name:after {
  content: ', ';
}

.c1 .title:after {
  content: ', ';
}

.c1 .date:after {
  content: ', ';
}

@media (max-width:600px) {
  .c0 {
    padding: 0 10px;
  }
}

<div
        className="display-artwork__caption c0"
      >
        .c0 {
  color: #999;
}

.c0 .name:after {
  content: ', ';
}

.c0 .title:after {
  content: ', ';
}

.c0 .date:after {
  content: ', ';
}

<div
          className="c0"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": <span>
                  <span
                    className="artist-name"
                  >
                    <span
                      className="name"
                    >
                      <file__StyledTextLink
                        color="#999"
                        href="/artwork/fernando-botero"
                        underline={false}
                      >
                        Fernando Botero
                      </file__StyledTextLink>
                    </span>
                  </span>
                  <span
                    className="title"
                  >
                    <file__StyledTextLink
                      color="#999"
                      href="/artwork/fernando-botero-nude-on-the-beach"
                      underline={false}
                    >
                      Nude on the Beach
                    </file__StyledTextLink>
                  </span>
                  <span
                    className="date"
                  >
                    2000
                  </span>
                  <file__StyledTextLink
                    color="#999"
                    href="/partner/gary-nader"
                    underline={false}
                  >
                    Gary Nader
                  </file__StyledTextLink>
                </span>,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  .c5 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c5:hover {
  opacity: 1;
}

.c4 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c1 {
  position: relative;
}

.c1:hover .c3 {
  opacity: 1;
}

.c2 {
  display: block;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 10px 0 10px 0;
}

.c7 {
  padding: 0;
  width: 100%;
  word-break: break-word;
}

.c7 > p,
.c7 p,
.c7 .public-DraftEditorPlaceholder-root {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
  color: #999;
  margin: 0;
}

.c7 > a,
.c7 a {
  color: #999;
}

.c7 > a:hover,
.c7 a:hover {
  color: black;
}

.c0 {
  margin-right: 10px;
  width: 168px;
}

@media (max-width:720px) {
  .c1 .c3 {
    opacity: 1;
  }
}

@media (max-width:600px) {
  .c6 {
    padding: 0px 10px;
  }
}

@media (max-width:600px) {
  .c7 {
    padding: 0px;
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 10px;
  }
}

<div
    className="c0"
    width={168}
  >
    .c4 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c4:hover {
  opacity: 1;
}

.c3 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0 {
  position: relative;
}

.c0:hover .c2 {
  opacity: 1;
}

.c1 {
  display: block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 10px 0 10px 0;
}

.c6 {
  padding: 0;
  width: 100%;
  word-break: break-word;
}

.c6 > p,
.c6 p,
.c6 .public-DraftEditorPlaceholder-root {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
  color: #999;
  margin: 0;
}

.c6 > a,
.c6 a {
  color: #999;
}

.c6 > a:hover,
.c6 a:hover {
  color: black;
}

@media (max-width:720px) {
  .c0 .c2 {
    opacity: 1;
  }
}

@media (max-width:600px) {
  .c5 {
    padding: 0px 10px;
  }
}

@media (max-width:600px) {
  .c6 {
    padding: 0px;
  }
}

<div
      className="article-image"
    >
      .c4 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c4:hover {
  opacity: 1;
}

.c3 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0 {
  position: relative;
}

.c0:hover .c2 {
  opacity: 1;
}

.c1 {
  display: block;
}

@media (max-width:720px) {
  .c0 .c2 {
    opacity: 1;
  }
}

<div
        className="c0"
      >
        .c0 {
  display: block;
}

<img
          alt="Photo by Adam Kuehl for Artsy."
          className="c0"
          height={224}
          src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2Fco8j2xq40ROMyBrJQm_4eQ%252FDafenOilPaintingVillage_AK03.jpg&width=1200&quality=95"
          width={168}
        />
        .c2 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c2:hover {
  opacity: 1;
}

.c1 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c0 {
  opacity: 1;
}

@media (max-width:720px) {
  .c0 .c0 {
    opacity: 1;
  }
}

<div
          className="c0 c1"
        >
          .c0 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover {
  opacity: 1;
}

<div
            className="c0"
            onClick={[Function]}
          >
            <svg
              className="expand"
              version="1.1"
              viewBox="0 0 27 27"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="none"
                strokeWidth="1"
              >
                <g>
                  <circle
                    cx="13.9575195"
                    cy="13.0588379"
                    fill="#000000"
                    fillRule="nonzero"
                    r="13"
                  />
                  <g
                    stroke="#FFFFFF"
                    transform="translate(8.000000, 7.000000)"
                  >
                    <g>
                      <g
                        transform="translate(0.382532, 0.382532)"
                      >
                        <polyline
                          points="4.78165571 0 11.1571966 0 11.1571966 6.37554094"
                        />
                        <polyline
                          points="-1.01881144e-06 4.78165537 6.37553992 4.78165537 6.37553992 11.1571963"
                          transform="translate(3.187769, 7.969426) rotate(-180.000000) translate(-3.187769, -7.969426) "
                        />
                        <path
                          d="M10.360254,0.796942618 L0.796942618,10.360254"
                          strokeLinecap="square"
                        />
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </svg>
          </div>
        </div>
      </div>
      .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 10px 0 10px 0;
}

.c1 {
  padding: 0;
  width: 100%;
  word-break: break-word;
}

.c1 > p,
.c1 p,
.c1 .public-DraftEditorPlaceholder-root {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
  color: #999;
  margin: 0;
}

.c1 > a,
.c1 a {
  color: #999;
}

.c1 > a:hover,
.c1 a:hover {
  color: black;
}

@media (max-width:600px) {
  .c0 {
    padding: 0px 10px;
  }
}

@media (max-width:600px) {
  .c1 {
    padding: 0px;
  }
}

<div
        className="c0"
      >
        .c0 {
  padding: 0;
  width: 100%;
  word-break: break-word;
}

.c0 > p,
.c0 p,
.c0 .public-DraftEditorPlaceholder-root {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
  color: #999;
  margin: 0;
}

.c0 > a,
.c0 a {
  color: #999;
}

.c0 > a:hover,
.c0 a:hover {
  color: black;
}

@media (max-width:600px) {
  .c0 {
    padding: 0px;
  }
}

<div
          className="c0"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Photo by Adam Kuehl for Artsy.</p>",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  .c5 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c5:hover {
  opacity: 1;
}

.c4 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c1 {
  position: relative;
}

.c1:hover .c3 {
  opacity: 1;
}

.c2 {
  display: block;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 10px 0 10px 0;
}

.c7 {
  padding: 0;
  width: 100%;
  word-break: break-word;
}

.c7 > p,
.c7 p,
.c7 .public-DraftEditorPlaceholder-root {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
  color: #999;
  margin: 0;
}

.c7 > a,
.c7 a {
  color: #999;
}

.c7 > a:hover,
.c7 a:hover {
  color: black;
}

.c0 {
  margin-right: 0px;
  width: 178px;
}

@media (max-width:720px) {
  .c1 .c3 {
    opacity: 1;
  }
}

@media (max-width:600px) {
  .c6 {
    padding: 0px 10px;
  }
}

@media (max-width:600px) {
  .c7 {
    padding: 0px;
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 10px;
  }
}

<div
    className="c0"
    width={178}
  >
    .c4 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c4:hover {
  opacity: 1;
}

.c3 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0 {
  position: relative;
}

.c0:hover .c2 {
  opacity: 1;
}

.c1 {
  display: block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 10px 0 10px 0;
}

.c6 {
  padding: 0;
  width: 100%;
  word-break: break-word;
}

.c6 > p,
.c6 p,
.c6 .public-DraftEditorPlaceholder-root {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
  color: #999;
  margin: 0;
}

.c6 > a,
.c6 a {
  color: #999;
}

.c6 > a:hover,
.c6 a:hover {
  color: black;
}

@media (max-width:720px) {
  .c0 .c2 {
    opacity: 1;
  }
}

@media (max-width:600px) {
  .c5 {
    padding: 0px 10px;
  }
}

@media (max-width:600px) {
  .c6 {
    padding: 0px;
  }
}

<div
      className="article-image"
    >
      .c4 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c4:hover {
  opacity: 1;
}

.c3 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0 {
  position: relative;
}

.c0:hover .c2 {
  opacity: 1;
}

.c1 {
  display: block;
}

@media (max-width:720px) {
  .c0 .c2 {
    opacity: 1;
  }
}

<div
        className="c0"
      >
        .c0 {
  display: block;
}

<img
          alt="Photo by Adam Kuehl for Artsy. Image courtesy of the Guggenheim Museum."
          className="c0"
          height={224}
          src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FCpHY-DRr7KW0HGXLslCXHw%2Flarger.jpg&width=1200&quality=95"
          width={178}
        />
        .c2 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c2:hover {
  opacity: 1;
}

.c1 {
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c0 {
  opacity: 1;
}

@media (max-width:720px) {
  .c0 .c0 {
    opacity: 1;
  }
}

<div
          className="c0 c1"
        >
          .c0 {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 10px;
  width: 25px;
  height: 25px;
  cursor: pointer;
  opacity: 0.6;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover {
  opacity: 1;
}

<div
            className="c0"
            onClick={[Function]}
          >
            <svg
              className="expand"
              version="1.1"
              viewBox="0 0 27 27"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="none"
                strokeWidth="1"
              >
                <g>
                  <circle
                    cx="13.9575195"
                    cy="13.0588379"
                    fill="#000000"
                    fillRule="nonzero"
                    r="13"
                  />
                  <g
                    stroke="#FFFFFF"
                    transform="translate(8.000000, 7.000000)"
                  >
                    <g>
                      <g
                        transform="translate(0.382532, 0.382532)"
                      >
                        <polyline
                          points="4.78165571 0 11.1571966 0 11.1571966 6.37554094"
                        />
                        <polyline
                          points="-1.01881144e-06 4.78165537 6.37553992 4.78165537 6.37553992 11.1571963"
                          transform="translate(3.187769, 7.969426) rotate(-180.000000) translate(-3.187769, -7.969426) "
                        />
                        <path
                          d="M10.360254,0.796942618 L0.796942618,10.360254"
                          strokeLinecap="square"
                        />
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </svg>
          </div>
        </div>
      </div>
      .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 10px 0 10px 0;
}

.c1 {
  padding: 0;
  width: 100%;
  word-break: break-word;
}

.c1 > p,
.c1 p,
.c1 .public-DraftEditorPlaceholder-root {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
  color: #999;
  margin: 0;
}

.c1 > a,
.c1 a {
  color: #999;
}

.c1 > a:hover,
.c1 a:hover {
  color: black;
}

@media (max-width:600px) {
  .c0 {
    padding: 0px 10px;
  }
}

@media (max-width:600px) {
  .c1 {
    padding: 0px;
  }
}

<div
        className="c0"
      >
        .c0 {
  padding: 0;
  width: 100%;
  word-break: break-word;
}

.c0 > p,
.c0 p,
.c0 .public-DraftEditorPlaceholder-root {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
  color: #999;
  margin: 0;
}

.c0 > a,
.c0 a {
  color: #999;
}

.c0 > a:hover,
.c0 a:hover {
  color: black;
}

@media (max-width:600px) {
  .c0 {
    padding: 0px;
  }
}

<div
          className="c0"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Photo by <a href='artsy.net'>Adam Kuehl</a> for Artsy. Image courtesy of the Guggenheim Museum.</p>",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
